exports[`invalid(1): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"d*e\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": "./dist/b.js", "files": ["d*e"]}

`;

exports[`invalid(1): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"d*e\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": "./dist/b.js", "files": ["d*e"]}
    |                          ^^^^^^^^^^^^^ Entry point \`./dist/b.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(10): {\"exports\": \"./src/**/*.js\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"exports": "./src/**/*.js", "files": ["dist"]}

`;

exports[`invalid(10): {\"exports\": \"./src/**/*.js\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"exports": "./src/**/*.js", "files": ["dist"]}
    |             ^^^^^^^^^^^^^^^ Entry point \`./src/**/*.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(11): {\"exports\": \"./dist/nested/foo.js\", \"files\": [\"dist/*.js\"]} 1`] = `

[Input]
  1 | {"exports": "./dist/nested/foo.js", "files": ["dist/*.js"]}

`;

exports[`invalid(11): {\"exports\": \"./dist/nested/foo.js\", \"files\": [\"dist/*.js\"]} 2`] = `

Message:
> 1 | {"exports": "./dist/nested/foo.js", "files": ["dist/*.js"]}
    |             ^^^^^^^^^^^^^^^^^^^^^^ Entry point \`./dist/nested/foo.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(12): {\"exports\": \"./a\", \"files\": [\"a*a\"]} 1`] = `

[Input]
  1 | {"exports": "./a", "files": ["a*a"]}

`;

exports[`invalid(12): {\"exports\": \"./a\", \"files\": [\"a*a\"]} 2`] = `

Message:
> 1 | {"exports": "./a", "files": ["a*a"]}
    |             ^^^^^ Entry point \`./a\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(13): {\"exports\": \"./a/nested/b.js\", \"files\": [\"a**b.js\"]} 1`] = `

[Input]
  1 | {"exports": "./a/nested/b.js", "files": ["a**b.js"]}

`;

exports[`invalid(13): {\"exports\": \"./a/nested/b.js\", \"files\": [\"a**b.js\"]} 2`] = `

Message:
> 1 | {"exports": "./a/nested/b.js", "files": ["a**b.js"]}
    |             ^^^^^^^^^^^^^^^^^ Entry point \`./a/nested/b.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(14): {\"exports\": \"./aX/wrong/c.js\", \"files\": [\"a**b/**/c.js\"]} 1`] = `

[Input]
  1 | {"exports": "./aX/wrong/c.js", "files": ["a**b/**/c.js"]}

`;

exports[`invalid(14): {\"exports\": \"./aX/wrong/c.js\", \"files\": [\"a**b/**/c.js\"]} 2`] = `

Message:
> 1 | {"exports": "./aX/wrong/c.js", "files": ["a**b/**/c.js"]}
    |             ^^^^^^^^^^^^^^^^^ Entry point \`./aX/wrong/c.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(15): {\"exports\": \"./ba\", \"files\": [\"a\"]} 1`] = `

[Input]
  1 | {"exports": "./ba", "files": ["a"]}

`;

exports[`invalid(15): {\"exports\": \"./ba\", \"files\": [\"a\"]} 2`] = `

Message:
> 1 | {"exports": "./ba", "files": ["a"]}
    |             ^^^^^^ Entry point \`./ba\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(16): {\"name\": \"p\", \"bin\": {\"x\": \"./index.js\", \"x\": \"./other.js\"}, \"exports\": \"./index.js\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"name": "p", "bin": {"x": "./index.js", "x": "./other.js"}, "exports": "./index.js", "files": ["dist"]}

`;

exports[`invalid(16): {\"name\": \"p\", \"bin\": {\"x\": \"./index.js\", \"x\": \"./other.js\"}, \"exports\": \"./index.js\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"name": "p", "bin": {"x": "./index.js", "x": "./other.js"}, "exports": "./index.js", "files": ["dist"]}
    |                                                                         ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(17): {\"exports\":\"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js\",\"files\":[\"*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z\"]} 1`] = `

[Input]
  1 | {"exports":"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js","files":["*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z"]}

`;

exports[`invalid(17): {\"exports\":\"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js\",\"files\":[\"*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z\"]} 2`] = `

Message:
> 1 | {"exports":"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js","files":["*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z"]}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Entry point \`./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(2): {\"name\": \"p\", \"exports\": \"./a/b/c.js\", \"files\": [\"*/*.js\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": "./a/b/c.js", "files": ["*/*.js"]}

`;

exports[`invalid(2): {\"name\": \"p\", \"exports\": \"./a/b/c.js\", \"files\": [\"*/*.js\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": "./a/b/c.js", "files": ["*/*.js"]}
    |                          ^^^^^^^^^^^^ Entry point \`./a/b/c.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(3): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"other*\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": "./dist/b.js", "files": ["other*"]}

`;

exports[`invalid(3): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"other*\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": "./dist/b.js", "files": ["other*"]}
    |                          ^^^^^^^^^^^^^ Entry point \`./dist/b.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(4): {\"exports\": \"./dist/foo.js\", \"files\": [\"*.js\"]} 1`] = `

[Input]
  1 | {"exports": "./dist/foo.js", "files": ["*.js"]}

`;

exports[`invalid(4): {\"exports\": \"./dist/foo.js\", \"files\": [\"*.js\"]} 2`] = `

Message:
> 1 | {"exports": "./dist/foo.js", "files": ["*.js"]}
    |             ^^^^^^^^^^^^^^^ Entry point \`./dist/foo.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(5): {\"name\": \"p\", \"exports\": {\".\": \"./lib/index.js\", \"./package.json\": \"./package.json\"}, \"files\": [\"lib\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": {".": "./lib/index.js", "./package.json": "./package.json"}, "files": ["lib"]}

`;

exports[`invalid(5): {\"name\": \"p\", \"exports\": {\".\": \"./lib/index.js\", \"./package.json\": \"./package.json\"}, \"files\": [\"lib\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": {".": "./lib/index.js", "./package.json": "./package.json"}, "files": ["lib"]}
    |                                                                    ^^^^^^^^^^^^^^^^ Entry point \`./package.json\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(6): {\"name\": \"foo\"} 1`] = `

[Input]
  1 | {"name": "foo"}

`;

exports[`invalid(6): {\"name\": \"foo\"} 2`] = `

Message:
> 1 | {"name": "foo"}
    | ^^^^^^^^^^^^^^^ Add a \`files\` allowlist so only intended files are published.

`;

exports[`invalid(7): {\"name\": \"foo\", \"private\": false} 1`] = `

[Input]
  1 | {"name": "foo", "private": false}

`;

exports[`invalid(7): {\"name\": \"foo\", \"private\": false} 2`] = `

Message:
> 1 | {"name": "foo", "private": false}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`files\` allowlist so only intended files are published.

`;

exports[`invalid(8): {\"exports\": \"./dist/index.js\", \"files\": [\"src\"]} 1`] = `

[Input]
  1 | {"exports": "./dist/index.js", "files": ["src"]}

`;

exports[`invalid(8): {\"exports\": \"./dist/index.js\", \"files\": [\"src\"]} 2`] = `

Message:
> 1 | {"exports": "./dist/index.js", "files": ["src"]}
    |             ^^^^^^^^^^^^^^^^^ Entry point \`./dist/index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(9): {\"types\": \"./types/index.d.ts\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"types": "./types/index.d.ts", "files": ["dist"]}

`;

exports[`invalid(9): {\"types\": \"./types/index.d.ts\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"types": "./types/index.d.ts", "files": ["dist"]}
    |           ^^^^^^^^^^^^^^^^^^^^ Entry point \`./types/index.d.ts\` is not covered by the \`files\` allowlist.

`;
